--- a/css/responsive/mobile/homepageMobileResponsive.css
+++ b/css/responsive/mobile/homepageMobileResponsive.css
@@ -13,7 +13,7 @@
     display: block !important;
   }
   body,
-  body * {
+  html {
     overflow-x: hidden !important;
   }
   section.hero_section {
