--- a/css/responsive/mobileLandscape/homepageLandscapeResponsive.css
+++ b/css/responsive/mobileLandscape/homepageLandscapeResponsive.css
@@ -12,7 +12,7 @@
       display: block !important;
     }
     body,
-    body * {
+    html {
       overflow-x: hidden !important;
     }
     section.hero_section {
