--- a/css/responsive/tablet/homepageTabletResponsive.css
+++ b/css/responsive/tablet/homepageTabletResponsive.css
@@ -14,7 +14,7 @@
       align-items: flex-end;
     }
     body,
-    body * {
+    html {
       overflow-x: hidden !important;
     }
     section.hero_section {
